--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,6 @@
 body {
-  margin: 0;
   font-family: sans-serif;
-  background-color: black;
-  color: #00ffcc;
+  background-color: #f5f5f5;
+  margin: 0;
+  padding: 2rem;
 }
