--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,14 +1,1 @@
-
-body {
-  margin: 0;
-  font-family: 'Segoe UI', sans-serif;
-  background: #000;
-  color: white;
-}
-
-.matrix-bg {
-  background-image: url('/images/matrix-bg.jpg');
-  background-size: cover;
-  background-attachment: fixed;
-  opacity: 0.95;
-}
+body { background: black; color: white; font-family: sans-serif; }
